2005-04-11 19:25  chi

	* jim.c: - Remove the '%lu' scan format specification. The largest
	  possible type   in the Jim core is jim_wide. That type is a
	  signed one. A unsigned   variante of jim_wide is not forseen. So
	  a '%lu' specification seems not   to make any sense.

	  - Some extra castings necessary to let the Jim core interpreter
	  compile and	run under Tru64U on Dec Alpha.

	  - Fix a bug in UpdateStringOfList(). If a list was created via
	  the Jim   command [list] w/o any argument, the internal
	  representation of that list	pointed to ZERO and the len
	  attribute was equally set to ZERO. If now   UpdateStringOfList
	  was called to create the string representation of   the list,
	  Jim_Alloc for quotingType got a ZERO size for number of bytes
	  to allocate. That let to SIGSEGV under Tru64U, so I changed that
	  to   allocate at least 1 byte then.

2005-04-11 16:34  antirez

	* ChangeLog, TODO, jim.c: RHS/Nem vision about [tailcall]
	  implementation/behaviour is now Jim's way to go.

2005-04-11 13:17  antirez

	* ChangeLog, jim.c: [tailcall] command added

2005-04-11 10:25  antirez

	* ChangeLog, jim.c, jimsh.c: Fixes for this two bugs:

	  (1) jim.c   Jim_FormatString()       char array spec[] is defined
	  as having two elements but at the 'default:' case of the switch
	  statement an assignment is made to the third element

	  (2) jimsh.c  JimGetExePath()	     After the call of strrchr()
	  the value of p could be NULL in the case that argv[0] is just
	  plain "jim". The next line should have a test for NULL added to
	  avoid dereferencing the NULL pointer.  (This is the cause of a
	  Bus Error on Mac OS X.)

	  Many thanks to Colin McPhail for reporting this two problems.

2005-04-10 19:04  chi

	* jim.c, jimsh.c: Rework of the [scan] command finished. It does
	  not any longer use sscanf for scanning purposes, only for parsing
	  within SetScanFmtFromAny. We could get rid of it there too, if
	  necessary.
